--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-##Change username to your MySQL workbench matching one
+##Change username to your MySQL workbench matching one (example: "root")
 spring.datasource.username=root
 ##Same for the password..
-spring.datasource.password=103306bc
+spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost/market_app?createDatabaseIfNotExist=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
